# aiida-quantumespresso

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CHANGELOG.md  CHANGELOG_v3_parser_keys.txt  LICENSE.txt  MANIFEST.In  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.json  setup.py
.ci/: before_install.sh  before_script.sh  setup_profiles.sh  test_pw_with_daemon.py  test_script.sh  validate_version_number.py
.ci/precommit/: fix_setup_version.py
.ci/torquessh-qe/: Dockerfile
.docker/: Dockerfile  docker-bake.hcl  docker-compose.aiida-quantumespresso.yml
.docker/_static/: Si.cif
.docker/s6-assets/init/: run-before-daemon-start.sh
.docker/scripts/: 60-pseudo-code-setup.sh
.docker/tests/: conftest.py  test_aiida.py
.github/config/: code-ph.yaml  code-pw.yaml  localhost-setup.yaml  profile.yaml
.github/scripts/: run_documentation_scripts.py
.github/workflows/: cd.yml  ci.yml  develop.yml  docker.yml  nightly.yml  update_changelog.py  validate_release_tag.py
.travis-data/: before_install.sh  before_script.sh  code-setup-input.txt  setup_profiles.sh  test_daemon.py  test_pw_with_daemon.py  test_script.sh
.travis-data/precommit/: fix_setup_version.py
.travis-data/torquessh-qe/: README.md
aiida_quantumespresso/: __init__.py  _base.py
aiida_quantumespresso/calculations/: __init__.py  base.py  cp.py  dos.py  epw.py  matdyn.py  namelists.py  neb.py  ph.py  pp.py  projwfc.py  pw.py  pw2gw.py  pw2wannier90.py  pwimmigrant.py  q2r.py
aiida_quantumespresso/calculations/functions/: create_kpoints_from_distance.py
aiida_quantumespresso/calculations/helpers/: INPUT_PW-5.0.1.xml  INPUT_PW-5.0.xml  INPUT_PW-5.1.1.xml  INPUT_PW-5.1.2.xml  INPUT_PW-5.1.xml  INPUT_PW-5.2.0.xml  INPUT_PW-5.3.0.xml  INPUT_PW-5.4.0.xml  INPUT_PW-6.0.xml  INPUT_PW-6.1.xml  INPUT_PW-6.2.xml  INPUT_PW-6.3.xml  INPUT_PW-6.5.xml  INPUT_PW-6.6.xml  INPUT_PW-6.7.xml  __init__.py
aiida_quantumespresso/calculations/schemas/: utils.py
aiida_quantumespresso/cli/: __init__.py  cli.py
aiida_quantumespresso/cli/calculations/: __init__.py  cp.py  dos.py  epw.py  matdyn.py  neb.py  ph.py  pp.py  projwfc.py  pw.py  pw2wannier90.py  q2r.py
aiida_quantumespresso/cli/data/: __init__.py  structure.py
aiida_quantumespresso/cli/utils/: defaults.py  display.py  launch.py  options.py  validate.py
aiida_quantumespresso/cli/workflows/: __init__.py
aiida_quantumespresso/common/: exceptions.py  pluginloader.py  types.py  workchain.py
aiida_quantumespresso/common/workchain/: utils.py
aiida_quantumespresso/data/: force_constants.py  forceconstants.py
aiida_quantumespresso/dbexport/tcodplugins/: cp.py  pw.py
aiida_quantumespresso/parsers/: __init__.py  base.py  basic_raw_parser_cp.py  basic_raw_parser_pw.py  basicpw.py  constants.py  cp.py  dos.py  matdyn.py  neb.py  ph.py  pp.py  projwfc.py  pw.py  pw2gw.py  pw2wannier90.py  q2r.py  raw_parser_cp.py  raw_parser_neb.py  raw_parser_ph.py  raw_parser_pw.py  raw_parser_simple.py
aiida_quantumespresso/parsers/parse_raw/: base.py  cp.py  neb.py  ph.py  projwfc.py  pw.py  pw2gw.py  simple.py
aiida_quantumespresso/parsers/parse_xml/: exceptions.py  legacy.py  parse.py  versions.py
aiida_quantumespresso/tests/: pwinputparser.py  quantumespressoph.py  quantumespressopwimmigrant.py  tcodexporter.py
aiida_quantumespresso/tests/backend/: pwinputparser.py  quantumespressopw.py  quantumespressopwimmigrant.py
aiida_quantumespresso/tools/: base.py  cp_tools.py  cpinputparser.py  immigrate_calc.py  importstructure.py  pwimmigrant.py  pwinputparser.py  qeinputparser.py
aiida_quantumespresso/tools/calculations/: pw.py
aiida_quantumespresso/utils/: bands.py  convert.py  invalidates_cache.py  linalg.py  mapping.py  pseudopotential.py  resources.py  restart.py  transfer.py
aiida_quantumespresso/utils/cli/: options.py  validate.py
aiida_quantumespresso/utils/click/: options.py  validators.py
aiida_quantumespresso/utils/protocols/: pw.py  sssp_efficiency_1.0.json  sssp_efficiency_1.1.json  sssp_precision_1.0.json  sssp_precision_1.1.json
aiida_quantumespresso/utils/validation/: magnetization.py  trajectory.py
aiida_quantumespresso/workflows/: __init__.py  pd.py  pdos.py  phonon_dispersion.py  restart_setup.py  wf_XTiO3.py  workfunctions.py
aiida_quantumespresso/workflows/functions/: create_kpoints_from_distance.py  seekpath_structure_analysis.py
aiida_quantumespresso/workflows/matdyn/: base.py
aiida_quantumespresso/workflows/pdos/: base.py
aiida_quantumespresso/workflows/ph/: base.py  (+2 more)
cli/utils/: click.py  options.py  validators.py
dev/: update_changelog.py
docker/: Dockerfile
docs/: Makefile  requirements_for_rtd.txt
docs/source/: conf.py  developer.md  index.md  index.rst
examples/: cp.py
src/aiida_quantumespresso/: __init__.py
tests/: conftest.py  pytest.ini
tests/calculations/: test_autoinvalidate_cache.py  test_bands.py  test_cp.py  test_epw.py  test_helpers.py  test_matdyn.py  test_namelists.py  test_neb.py  test_open_grid.py  test_opengrid.py  test_ph.py  test_pp.py  test_projwfc.py  test_pw.py  test_pw2gw.py  test_q2r.py  test_utils.py
tests/cli/: conftest.py  test_commands.py
tests/common/: __init__.py  __initi__.py  test_hubbard.py
tests/data/: test_hubbard_structure.py
tests/parsers/: parsers.py  pwinputparser.py  quantumespressopw.py  quantumespressopwimmigrant.py  tcodexporter.py  test_bands.py  test_cp.py  test_dos.py  test_matdyn.py  test_neb.py  test_open_grid.py  test_opengrid.py  test_ph.py  test_pp.py  test_projwfc.py  test_pw.py  test_pw2gw.py  test_pw2wannier90.py  test_q2r.py  test_xspectra.py
tests/tools/: test_code_setup.py  test_immigrate.py  test_monitors.py
tests/utils/: conftest.py  test_bands.py  test_convert.py  test_hubbard.py  test_restart.py  test_transfer.py
tests/workflows/: test_pd.py  test_pdos.py  test_workflows.py  test_xps.py
utils/: __init__.py  fastentrypoints.py  validate_version_number.py
work_directory/test/: nscf.in
work_directory/test1/: CRASH  dos.in  scf.in
(+1152 files in other folders)
